[gd_scene load_steps=4 format=2]

[ext_resource path="res://rooms/RoomManager.gd" type="Script" id=1]
[ext_resource path="res://rooms/OutsideRoom.gd" type="Script" id=3]
[ext_resource path="res://rooms/Room.tscn" type="PackedScene" id=4]

[node name="RoomManager" type="Node"]
script = ExtResource( 1 )

[node name="EmptyRoom" parent="." instance=ExtResource( 4 )]
margin_left = -591.0
margin_top = -532.0
margin_right = -341.0
margin_bottom = -332.0
room_name = "白色房間"
room_id = "white_room"
room_description = "這是一個白色的房間，有個男人站在你眼前。"

[node name="DeveloperRoom" parent="." instance=ExtResource( 4 )]
margin_left = -916.0
margin_top = -531.0
margin_right = -666.0
margin_bottom = -331.0
room_name = "開發者小屋"
room_id = "developer_room"
room_description = "這是所破舊的公寓，開發者的靈魂正在電腦桌前睡覺。"

[node name="TrainingRoom" parent="." instance=ExtResource( 4 )]
margin_left = -292.0
margin_top = -525.0
margin_right = -42.0
margin_bottom = -325.0
room_name = "練習間"
room_id = "training_room"
room_description = "這是一個白色的房間，有個木樁立在中間，一位古裝打扮的男人倚在房間的另一邊。"

[node name="Unkown" parent="." instance=ExtResource( 4 )]
margin_left = -1198.0
margin_top = -529.0
margin_right = -948.0
margin_bottom = -329.0
room_name = "未知"
room_id = "unkown"
room_description = "一片漆黑，地上有把黑色鑰匙。"

[node name="Outside" parent="." instance=ExtResource( 4 )]
margin_left = -589.0
margin_top = -783.0
margin_right = -339.0
margin_bottom = -583.0
script = ExtResource( 3 )
room_name = "白色虛空"
room_id = "white_void"
room_description = "你走出了白色房間，外面是一望無際的白色虛空......"
enter_story = [ "背後的門消失了", "一把天上傳來的聲音： “是時候讓你離開了。”", "你眼前一白，陷入了昏迷", "" ]
enter_story_timer = [ 1, 3, 2, 2 ]

[node name="WoodHouse" parent="." instance=ExtResource( 4 )]
margin_left = 184.0
margin_top = -781.0
margin_right = 434.0
margin_bottom = -581.0
room_name = "簡陋木屋"
room_id = "wood_house"
room_description = "這是一個簡陋的木屋。"
when_enter = "你進入了簡陋木屋"
enter_story = [ "你睜開眼，發現自己在一所木屋的床上" ]
enter_story_timer = [ 3 ]
